SPA/examples/negative/array1N.c
int main(void){
  double a[32] = {0.0};

  a[1]=(a[2])++;  

}
